# agent-chisels

./: .claude-plugin  .gitignore  AGENTS.md  LICENSE  README.md  skills
.beads/: .beads-credential-key  beads.left.meta.json  issues.jsonl  metadata.json
.claude-plugin/: marketplace.json
.claude/skills/: design-test-dsl  detect-jujutsu  detecting-jujutsu  document-architectural-decisions  documenting-architectural-decisions  evaluate-skills  evaluating-skills  use-jujutsu  using-jujutsu  write-agents-files
agentfiles/: AGENTS.md  README.md  flake.nix  mise.toml
backlog/: init-claude-plugin-plan.md  jj-userpromptsubmit-hooks.md  multi-review-results.md
docs/: QUICKSTART.md  decision-log.md  plugin-dev-guide.md
docs/backlog/: jj-userpromptsubmit-hooks.md  opencode-jj-plugin.md
plugins/: AGENTS.md  README.md  decision-log.md
plugins/.claude-plugin/: marketplace.json
plugins/jj/: README.md  decision-log.md
scripts/: sync-skills.sh  verify-skills-opencode.sh  verify-skills-static.sh
skills/: README.md
skills/design-test-dsl/: SKILL.md
skills/detecting-jujutsu/: SKILL.md
skills/documenting-architectural-decisions/: SKILL.md
skills/evaluate-skills/: SKILL.md
skills/using-jujutsu/: SKILL.md
tools/: agentsctl-spec-1.md  skillsctl-spec-1.md
tools/llm-usage/cli-tests/: Cargo.toml
tools/llm-usage/cli-tests/src/: assertions.rs  lib.rs
tools/llm-usage/cli-tests/src/dsl/: mod.rs
tools/llm-usage/cli-tests/tests/: all_mode.rs  date_filters.rs  errors.rs  project_discovery.rs  project_flag.rs  sessions_by_model.rs  tokens.rs  usage_by_date.rs
(+92 files in other folders)
