[package]
name = "llm-usage-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing framework
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
rstest = "0.22"

# Utilities
tempfile = "3.8"
anyhow = "1.0"
